--- a/ClothesShop/packages.config
+++ b/ClothesShop/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net472" />
   <package id="Microsoft.ReportViewer.WebForms" version="10.0.40219.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
