--- a/ClothesShop/packages.config
+++ b/ClothesShop/packages.config
@@ -12,6 +12,7 @@
   <package id="CodeMirror.NuGet" version="5.35.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="FreeSpire.XLS" version="11.8.6" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.twbsPagination" version="1.0.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
