--- a/ClothesShop/packages.config
+++ b/ClothesShop/packages.config
@@ -14,6 +14,7 @@
   <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="jQuery.twbsPagination" version="1.0.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.4" targetFramework="net472" />
+  <package id="jQuery.Validation.Unobtrusive" version="2.0.20710.0" targetFramework="net472" />
   <package id="jquery-globalize" version="1.1.1" targetFramework="net472" />
   <package id="JSZip" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
