--- a/ClothesShop/Web.config
+++ b/ClothesShop/Web.config
@@ -90,10 +90,18 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="ClothesShopEntities" connectionString="metadata=res://*/DbEntites.csdl|res://*/DbEntites.ssdl|res://*/DbEntites.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U2JEEI8\SQLEXPRESS;initial catalog=ClothesShop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ClothesShopConnectionString" connectionString="Data Source=DESKTOP-U2JEEI8\SQLEXPRESS;Initial Catalog=ClothesShop;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+	<!--
+	<connectionStrings>
+		<add name="ClothesShopEntities" connectionString="metadata=res://*/DbEntites.csdl|res://*/DbEntites.ssdl|res://*/DbEntites.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=SQL5109.site4now.net;Initial Catalog=db_a88dff_clotheshop;User Id=db_a88dff_clotheshop_admin;Password=ggg@2001;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="ClothesShopConnectionString" connectionString="Data Source=SQL5109.site4now.net;Initial Catalog=db_a88dff_clotheshop;User Id=db_a88dff_clotheshop_admin;Password=ggg@2001" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+-->
+	<connectionStrings>
+		<add name="ClothesShopEntities" connectionString="metadata=res://*/DbEntites.csdl|res://*/DbEntites.ssdl|res://*/DbEntites.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U2JEEI8;initial catalog=ClothesShop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="ClothesShopConnectionString" connectionString="Data Source=DESKTOP-U2JEEI8;Initial Catalog=ClothesShop;Integrated Security=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
+
+	
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
